<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">APDU Sender Contactless</string>
    <string name="textNfc_name">NO READER DETECTED</string>
    <string name="textCard_name">PLEASE TAP CARD</string>
    <string name="textDataIn_name">Data:</string>
    <string name="check_box_raw_name">RAW C-APDU</string>
    <string name="button_SendApdu_name">讀卡</string>
    <string name="button_SetNFC_name">複製</string>
    <string name="button_Paste_name">Paste</string>
</resources>
