<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="fill_parent" android:layout_height="fill_parent" >
    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
    
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
        
            <ImageView
                android:id="@+id/imageNfc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_nfc_off" />
            <TextView
                android:id="@+id/textNfc"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/textNfc_name"
                android:textSize="20dp" >
            </TextView>
        </LinearLayout>
    
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <ImageView
                android:id="@+id/imageCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_icc_off" />
            <TextView
                android:id="@+id/textCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textCard_name"
                android:textSize="11dp" >
            </TextView>
        </LinearLayout>

        <TextView
            android:id="@+id/textDataIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textDataIn_name"
            android:textSize="14dp" >
        </TextView>
        <EditText
            android:id="@+id/editDataIn"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="10dp"
            android:ems="10"
            android:maxLength="254"
            android:text=""
            android:textSize="13dp" />
        <Spinner
            android:id="@+id/APDU_spinner_table"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
        </Spinner>
    
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal" 
            android:weightSum="10">   
        
            <CheckBox
                android:id="@+id/check_box_raw"
                android:enabled="false"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text=""
                android:layout_weight="5">
            </CheckBox>
        </LinearLayout>
    
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal" 
            android:weightSum="10">    
            <Button
                android:id="@+id/button_SendApdu"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/button_SendApdu_name"
                android:layout_weight="10"/>
        </LinearLayout>
     
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal" 
            android:weightSum="10">
            <Button
                android:id="@+id/button_SetNFC"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_SetNFC_name" 
                android:layout_weight="5" />
            <Button
                android:id="@+id/button_Paste"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_Paste_name"
                android:layout_weight="5" />
        </LinearLayout>
        
        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_margin="6dp"
            android:scrollbars="none" >
            <TextView
                android:id="@+id/textLog"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />
        </ScrollView>
    </LinearLayout>

    <android.inputmethodservice.KeyboardView
        android:id="@+id/keyboardview"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:visibility="gone" />

</RelativeLayout>
